[project]
name = "comfyui-anime-upscale-4k"
description = "Post-processing nodes for anime video upscaling to 4K. Optimized for Wan2.1/2.2. Includes Real-ESRGAN upscaling, color correction, temporal denoising, line enhancement, and FFmpeg video export."
version = "1.0.0"
license = "MIT"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
    "realesrgan>=0.3.0",
    "basicsr>=1.4.2",
    "gfpgan>=1.3.8",
    "requests>=2.28.0",
    "tqdm>=4.64.0",
]

[project.urls]
Repository = "https://github.com/YOUR_USERNAME/ComfyUI-AnimeUpscale4K"

[tool.comfy]
PublisherId = "your_publisher_id"
DisplayName = "Anime Upscale 4K"
Icon = "🎌"
